# Fiamy

./: .gitignore  CMakeLists.txt  Main.qml  Readme.md  app.rc  audiocaptureanalyzer.cpp  audiocaptureanalyzer.h  icons.qrc  main.cpp  qmldir  qtcsettings.cmake  resources.qrc  youtubedownloader.cpp  youtubedownloader.h
.github/workflows/: release-linux.yml
.rcc/qmlcache/: PastelMP3_Main_qml.cpp  PastelMP3_Main_qml.cpp.aotstats  PastelMP3_qml_loader_file_list.rsp  PastelMP3_qmlcache_loader.cpp  all_aotstats.aotstatslist  module_PastelMP3.aotstatslist
.rcc/qmlcache/PastelMP3_components/: ActionButtons_qml.cpp  ActionButtons_qml.cpp.aotstats  AudioVisualizer_qml.cpp  AudioVisualizer_qml.cpp.aotstats  BookMarkPlayer_qml.cpp  BookMarkPlayer_qml.cpp.aotstats  PlayerCard_qml.cpp  PlayerCard_qml.cpp.aotstats  PlayerControls_qml.cpp  PlayerControls_qml.cpp.aotstats  PlayerManager_qml.cpp  PlayerManager_qml.cpp.aotstats  ProgressBar_qml.cpp  ProgressBar_qml.cpp.aotstats  SongInfo_qml.cpp  SongInfo_qml.cpp.aotstats  VisualizerBar_qml.cpp  VisualizerBar_qml.cpp.aotstats  VisualizerBars_qml.cpp  VisualizerBars_qml.cpp.aotstats  VolumeControl_qml.cpp  VolumeControl_qml.cpp.aotstats
.rcc/qmllint/: PastelMP3.rsp  PastelMP3_json.rsp  PastelMP3_module.rsp
components/: ActionButtons.qml  AudioVisualizer.qml  BookMarkPlayer.qml  BookmarkPlayer.qml  PlayerCard.qml  PlayerControls.qml  ProgressBar.qml  QueueDrawer.qml  SongInfo.qml  VisualizerBar.qml  VisualizerBars.qml  VolumeControl.qml  YoutubeQueueInput.qml  qmldir
docs/: linux.md  release-v1.0.2-linux-beta.md  trixie-packaging.md  windows.md
packaging/linux/: README.md  audit-appimage.sh  build-release.sh  deploy-runtime-libs.sh  package-appimage.sh  package-deb-trixie.sh  package-deb.sh  package-portable.sh  smoke-test-linux-bundle.sh  smoke-test-linux-docker.sh  upload-release-assets.sh  verify-linux-bundle.sh
packaging/qt-cosmo/: README.md  copy-fat-sidecars.sh  cosmo-fat.cmake  cosmo.cmake  cosmoar-fat  cosmoranlib-fat  fake-xcrun  make-fiamy-com.sh
packaging/qt-cosmo/patches/: ffmpeg-cosmo-tx-pfa-guard.patch  qtbase-cosmo-native-platform.patch  qtbase-cosmo-vnc-fixes.patch  qtdeclarative-host-tool-backports.patch  qtmultimedia-cosmo-fixes.patch
packaging/windows/: README.md  deploy-windows.bat
platform/linux/: README.md  fiamy.desktop.in
platform/windows/: README.md
